Functions moved to common script file

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 </div>
 
 <script src="https://embed.twitch.tv/embed/v1.js"></script>
-<script src="script.js"></script>
+<script type="module" src="onx.js"></script>
 
 </body>
 </html>
