--- a/public/nopixel.html
+++ b/public/nopixel.html
@@ -42,7 +42,7 @@
 </div>
 
 <script src="https://embed.twitch.tv/embed/v1.js"></script>
-<script src="script_nopixel.js"></script>
+<script type="module" src="script_nopixel.js"></script>
 
 </body>
 </html>
