--- a/public/nopixel.html
+++ b/public/nopixel.html
@@ -16,9 +16,12 @@
     </select>
 </div>
 
-<div class="main-stage">
+<div class="main-stage" id="main-stage">
     <div id="main-stream" class="main-stream"></div> <!-- Container for the main, larger stream -->
     <div id="marked-streams" class="marked-streams"></div> <!-- Container for other marked streams -->
+    <button id="main-stage-hide-button" class="main-stream-hide-button">
+        <img src="img/hide_arrow.png" alt=""/>
+    </button>
 </div>
 
 
