--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,13 @@
         <!-- Add more options for additional pages as needed -->
     </select>
 </div>
-    
 
-<div class="main-stage">
+<div id="main-stage" class="main-stage">
     <div id="main-stream" class="main-stream"></div> <!-- Container for the main, larger stream -->
     <div id="marked-streams" class="marked-streams"></div> <!-- Container for other marked streams -->
+    <button id="main-stage-hide-button" class="main-stream-hide-button">
+        <img src="img/hide_arrow.png" alt=""/>
+    </button>
 </div>
 
 
