Updated Refreshing and Main Stage Handling

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,8 @@
             <li><a href="#" class="filter-link" data-filter="EMS,Doctor,Doc">EMS</li>
             <li><a href="#" class="filter-link" data-filter="Gov,Government,DMV,Justice,Justice System,Lawyer,Law,Attorney,Mayor,MAYOR,Secretary of Defence">Government</li>
         </ul>
+
+        <button id="refresh-streams">Refresh Streams</button>
     </div>
 </div>
 
