Filter streams without ID's to prevent errors.

--- a/public/nopixel.html
+++ b/public/nopixel.html
@@ -10,7 +10,7 @@
 
 <div class="navbar">
     <select id="page-selector" class="page-selector">
-        <option value="index.html">ONX RP</option>
+        <option value="onx.html">ONX RP</option>
         <option value="nopixel.html" selected aria-selected="true">No Pixel RP</option>
         <!-- Add more options for additional pages as needed -->
     </select>
