--- a/public/onx.html
+++ b/public/onx.html
@@ -10,7 +10,7 @@
 
 <div class="navbar">
     <select id="page-selector" class="page-selector">
-        <option value="index.html" selected aria-selected="true">ONX RP</option>
+        <option value="onx.html" selected aria-selected="true">ONX RP</option>
         <option value="nopixel.html">No Pixel RP</option>
         <!-- Add more options for additional pages as needed -->
     </select>
