--- a/public/onx.html
+++ b/public/onx.html
@@ -62,9 +62,14 @@
         </ul>-->
 
         <div id="scroll-button-container" class="scroll-button-container">
-            <button id="scroll-up-button" class="scroll-button">Up</button>
-            <button id="scroll-down-button" class="scroll-button">Down</button>
+            <button id="scroll-up-button" class="scroll-button">
+                <img src="img/Arrow_Up.png" alt="Up" class="scroll-icon">
+            </button>
+            <button id="scroll-down-button" class="scroll-button">
+                <img src="img/Arrow_Down.png" alt="Down" class="scroll-icon">
+            </button>
         </div>
+        
 
         <footer class="site-footer">
             <p>&copy; 2024 GTARolePlay.Live All rights reserved.</p>
