Resizing Adjustments and Ko Fi link

--- a/public/onx.html
+++ b/public/onx.html
@@ -73,6 +73,10 @@
         
 
         <footer class="site-footer">
+            <div class="kofi">
+                <p>Buy me a coffee?</p>
+                <a href="https://ko-fi.com/dommdynamite" target="_blank">Ko-Fi.com/dommdynamite</a>
+            </div>
             <p>&copy; 2024 GTARolePlay.Live All rights reserved.</p>
             <p>Contact: pressstartinteractive@gmail.com</p>
         </footer>
